[v5.x]
- Actualización para temporada 2015/16.

[v4.1]-[v4.7]
- Corrección de errores.

[v4.0] 
- Actualización para temporada 2014/15. Cambios en equipos y en la quiniela: el pleno al 15 no va con 1,x,2  sino con 0,1,2,M.

[v3.4]
- Corrección de bug en pestaña Configuración.

[v3.3]
- Se pueden introducir quinielas manualmente (para que el programa las corrija).
- En menú contextual de pantalla principal se puede ver el listado de cambios de las versiones (changelog).
- Si no hay conectividad de datos, se sale del programa sin error.
- Gestión ACRA de errores. 

[v3.2] 
- Posibilidad de anular ciertas versiones de la aplicación.

[v3.1] 
- Posibilidad de corregir cualquier dato erróneo en tiempo real.

[v3.0] 
- Autoactualización de datos en cada cambio de temporada

[entre v1.6 y 2.3]
- Arreglo de bugs, y salto a temporada 2012/13

[v1.6]
- Poder hacer quinielas con n dobles, m tripes ...
- No deja meter nombre de quiniela repetido en esa jornada, pero puede ser igual a otra de otra jornada.
- Se permiten nombres en blanco de quinielas. En este caso no se chequea lo del nombre repetido.
- Corrección en tiempo real las quinielas hechas (se mostrará el número de aciertos sobre los partidos ya finalizados).
- Aviso de quinielas premiadas (aciertos >=10)

[v1.5]
- Permite mover la aplicación a la tarjeta.
	