@@ -34,8 +34,9 @@ CREATE TABLE valoresdefecto_equipos_calidadintrinseca (id_temporada integer NOT 
 
 insert into pesos_factores (id_usuario, aleatoriedad, calidad_intrinseca, factor_campo, golaveraje, golaveraje_localvisit, puntos_partido, puntos_partido_localvisit, ultimos4, ultimos4_localvisit) values (6,11,22,33,44,55,66,77,88,99);
 
-insert into temporadas values (1516, '2015/16');
+insert into temporadas values (1617, '2016/17');
 
+insert into equipos values ('ala', 'Alavés');
 insert into equipos values ('ath', 'Ath.Bilbao');
 insert into equipos values ('atm', 'At.Madrid');
 insert into equipos values ('bar', 'F.C.Barcelona');
@@ -44,126 +45,125 @@ insert into equipos values ('cel', 'Celta');
 insert into equipos values ('dep', 'Deportivo');
 insert into equipos values ('eib', 'Eibar'); 	
 insert into equipos values ('esp', 'Espanyol');
-insert into equipos values ('get', 'Getafe');
-insert into equipos values ('gij', 'S.Gijón');
 insert into equipos values ('gra', 'Granada');
-insert into equipos values ('lev', 'Levante');
 insert into equipos values ('lpa', 'Las Palmas');
+insert into equipos values ('leg', 'Leganés');
 insert into equipos values ('mga', 'Málaga');
+insert into equipos values ('osa', 'Osasuna');
 insert into equipos values ('rma', 'R.Madrid');
 insert into equipos values ('rso', 'R.Sociedad');
-insert into equipos values ('rva', 'R.Vallecano');
 insert into equipos values ('sev', 'Sevilla C.F.');
+insert into equipos values ('gij', 'S.Gijón');
 insert into equipos values ('val', 'Valencia');
 insert into equipos values ('vil', 'Villarreal');
 
-insert into equipos values ('ala',  'Alavés');
-insert into equipos values ('alb',  'Albacete');
 insert into equipos values ('alc',  'Alcorcón');
 insert into equipos values ('alm',  'Almería');
-insert into equipos values ('ath2', 'Bilbao Athletic');
+insert into equipos values ('cad',  'Cádiz');
 insert into equipos values ('cor',  'Córdoba');
 insert into equipos values ('elc',  'Elche');
+insert into equipos values ('get',  'Getafe');
 insert into equipos values ('gim',  'Gimnàstic');
 insert into equipos values ('gir',  'Girona');
 insert into equipos values ('hue',  'Huesca');
-insert into equipos values ('leg',  'Leganés');
-insert into equipos values ('lla',  'Llagostera');
+insert into equipos values ('lev',  'Levante');
 insert into equipos values ('lug',  'Lugo');
 insert into equipos values ('mca',  'Mallorca');
 insert into equipos values ('mir',  'Mirandés');
 insert into equipos values ('num',  'Numancia');
-insert into equipos values ('osa',  'Osasuna');
+insert into equipos values ('rva',  'Rayo Vallecano');
 insert into equipos values ('ovi',  'Oviedo');
-insert into equipos values ('pon',  'Ponferradina');
-insert into equipos values ('ten',  'Tenerife');
 insert into equipos values ('vad',  'Valladolid');
 insert into equipos values ('zar',  'Zaragoza');
+insert into equipos values ('reu',  'Reus Deportiu');
+insert into equipos values ('sev2', 'Sevilla Atlético');
+insert into equipos values ('ten',  'Tenerife');
+insert into equipos values ('mur',  'UCAM Murcia');
 
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'ath', 1);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'atm', 1);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'bar', 1);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'bet', 1);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'cel', 1);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'dep', 1);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'eib', 1);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'esp', 1);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'get', 1);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'gij', 1);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'gra', 1);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'lev', 1);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'lpa', 1);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'mga', 1);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'rma', 1);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'rso', 1);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'rva', 1);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'sev', 1);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'val', 1);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'vil', 1);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'ala', 1);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'ath', 1);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'atm', 1);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'bar', 1);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'bet', 1);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'cel', 1);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'dep', 1);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'eib', 1);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'esp', 1);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'gra', 1);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'lpa', 1);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'leg', 1);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'mga', 1);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'osa', 1);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'rma', 1);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'rso', 1);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'sev', 1);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'gij', 1);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'val', 1);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'vil', 1);
 
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'ala', 2);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'alb', 2);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'alc', 2);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'alm', 2);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'ath2', 2);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'cor', 2);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'elc', 2);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'gim', 2);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'gir', 2);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'hue', 2);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'leg', 2);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'lla', 2);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'lug', 2);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'mca', 2);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'mir', 2);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'num', 2);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'osa', 2);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'ovi', 2);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'pon', 2);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'ten', 2);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'vad', 2);
-insert into equipos_temporada (id_temporada, id_equipo, division) values (1516, 'zar', 2);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'alc', 2);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'alm', 2);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'cad', 2);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'cor', 2);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'elc', 2);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'get', 2);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'gim', 2);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'gir', 2);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'hue', 2);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'lev', 2);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'lug', 2);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'mca', 2);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'mir', 2);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'num', 2);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'rva', 2);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'ovi', 2);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'vad', 2);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'zar', 2);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'reu', 2);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'sev2', 2);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'ten', 2);
+insert into equipos_temporada (id_temporada, id_equipo, division) values (1617, 'mur', 2);
 
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'bar', 95);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'rma', 93);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'atm', 76);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'val', 75);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'sev', 74);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'vil', 55);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'ath', 49);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'cel', 44);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'mga', 43);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'esp', 42);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'rva', 42);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'rso', 38);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'lev', 27);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'get', 27);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'dep', 25);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'gra', 25);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'eib', 25);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'bet', 25);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'gij', 25);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'lpa', 25);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'ala', 32);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'ath', 62);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'atm', 88);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'bar', 91);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'bet', 45);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'cel', 60);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'dep', 42);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'eib', 43);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'esp', 43);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'gra', 39);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'lpa', 44);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'leg', 32);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'mga', 48);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'osa', 32);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'rma', 90);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'rso', 48);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'sev', 52);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'gij', 39);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'val', 44);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'vil', 64);
 
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'elc', 95);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'alm', 95);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'cor', 95);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'gir', 95);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'vad', 76);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'zar', 55);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'pon', 53);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'mir', 51);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'lla', 48);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'leg', 46);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'alc', 42);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'num', 40);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'ala', 40);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'alb', 36);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'lug', 33);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'mca', 31);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'ten', 31);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'osa', 25);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'ovi', 25);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'gim', 25);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'ath2', 25);
-insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1516, 'hue', 25);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'alc', 64);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'alm', 48);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'cad', 32);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'cor', 65);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'elc', 32);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'get', 75);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'gim', 71);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'gir', 66);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'hue', 32);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'lev', 75);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'lug', 54);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'mca', 49);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'mir', 52);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'num', 57);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'rva', 75);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'ovi', 59);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'vad', 51);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'zar', 64);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'reu', 32);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'sev2', 32);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'ten', 55);
+insert into valoresdefecto_equipos_calidadintrinseca (id_temporada, id_equipo, calidad_intrinseca) values (1617, 'mur', 32);
