@@ -1,3 +1,6 @@
+[v6.x]
+- Actualización para temporada 2016/17.
+
 [v5.x]
 - Actualización para temporada 2015/16.
 
